--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,19 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.activePage {
+  background: rgb(0, 188, 212);
+  border-radius: 10%;
+}
+
+.pagination li{
+  display: inline-flex;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.pagination{
+  text-align: center;
+}
+
